--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Inventario.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\Alex\\Documents\\Archivos universidad\\POO\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-5.1.46.jar-1=C:\\Users\\LN710Q\\Desktop\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
